[package]
name = "kensa"
version = "1.3.0"
edition = "2024"
description = "A fast TUI for reviewing GitHub PRs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Syntax highlighting
syntect = "5"

# CLI
clap = { version = "4", features = ["derive"] }

# Parsing
url = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = "0.4"

# Async for subprocess
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "io-util"] }

# Error handling
anyhow = "1"

# Directories
dirs = "5"

[profile.release]
lto = true
codegen-units = 1
strip = true
